ml_model_integration/phase4b_ecosystem/production_deployment/service_minio.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: conservation-prod
  labels:
    app: minio
    component: file_storage
spec:
  type: ClusterIP
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
  selector:
    app: minio
